<resources>
    <string name="app_name">SWM_learning app</string>
    <string name="already_nhave_an_naccount">Already \nhave an \nAccount?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="login">Login</string>
    <string name="use_other_methods">Use other Methods</string>
    <string name="login_icon">login Icon</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="nav_button">NavButton</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="screen_main_text_label">Here’s\nyour first\nstep with \nus!</string>
    <string name="register_nav_image_view">register_nav_image_view</string>
    <string name="register_image_icon">register_image_icon</string>
    <string name="notes">Notes</string>
    <string name="student_notes">Student notes</string>
    <string name="pomodoroImage">pomodoroImage</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="study_from_a_to_z">Study from A to Z</string>
    <string name="settingsImage">settingsImage</string>
    <string name="studentImage">StudentImage</string>
    <string name="student">Student</string>
    <string name="login_wrong_message">Wrong email or password</string>
    <string name="login_right_message">Login successfully </string>
    <string name="add_new_user_message">User added successfully </string>
    <string name="add_new_user_error_message">Please complete your registration form</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="user_email">User Email</string>
    <string name="send">Send</string>
    <string name="enter_your_email_to_send_an_email_verivecation_to_reset_your_password">Enter your email to send an email verivecation to reset your password</string>
    <string name="log_out">Log out</string>
    <string name="to_do_list">To do list</string>
    <string name="user_image">user_image</string>
    <string name="save_changes">Save changes</string>
    <string name="reset_password">Reset Password</string>
    <string name="phone_number">phone number</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="_25_00">25:00</string>
    <string name="round_0">Round: 0</string>
    <string name="get_started">Get Started</string>
    <string name="reset">Reset</string>
    <string name="get_break">Get Break</string>
    <string name="_05_00">05:00</string>
    <string name="stop_break">Stop Break</string>
    <string name="back">Back</string>
    <string name="enter_new_task">Enter new task</string>
    <string name="new_task">New Task</string>
    <string name="create">Create</string>
    <string name="tasks">Tasks</string>
    <string name="add_new_task">add new task</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note_imagebutton">delete_note_imagebutton</string>
    <string-array name="priority_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <!--colors for crop activity-->
    <!--<color name="ucrop_color_toolbar">@color/teal_500</color>-->
    <!--<color name="ucrop_color_statusbar">@color/teal_700</color>-->
    <!--<color name="ucrop_color_widget_active">@color/teal_500</color>-->


</resources>
