<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >
    <Button
        android:id="@+id/break_backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="50dp"
        android:background="@drawable/logout_button_background"
        android:drawableStart="@drawable/baseline_keyboard_backspace_24"
        android:text="@string/back"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="338dp"
        android:layout_height="380dp"
        android:layout_gravity="center"
        android:background="@mipmap/icon_break"
        android:gravity="center"
        android:text="@string/_05_00"
        android:textColor="#FFFFFF"
        android:textSize="50sp" />

    <Button
        android:id="@+id/buttonStopBreak"
        android:layout_width="246dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/stop_break"
        android:textColor="#FFFFFF" />

</LinearLayout>
