<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Label for the EditText -->
    <TextView
        android:gravity="center"
        android:id="@+id/newTaskLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_task"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />


    <!-- EditText for entering new task -->
    <EditText
        android:id="@+id/newTaskText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="taskName"
        android:background="@drawable/edit_text_background"
        android:inputType="textCapSentences"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/enter_new_task"
        android:padding="12dp"
        android:layout_below="@id/newTaskLabel"
        android:layout_marginBottom="8dp" />

    <!-- Priority Spinner -->
    <Spinner
        android:id="@+id/prioritySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newTaskText"
        android:layout_marginBottom="8dp"
        android:background="@drawable/spinner_background"
        android:padding="8dp" />

    <!-- Save Button -->
    <Button
        android:id="@+id/newTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/prioritySpinner"
        android:layout_alignParentEnd="true"
        android:background="@drawable/logout_button_background"
        android:text="@string/create"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
    <Button
        android:id="@+id/cancelTaskButton"
        android:layout_width="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/prioritySpinner"
        android:layout_alignParentEnd="true"
        android:background="@drawable/logout_button_background"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</RelativeLayout>
