<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/buttom_sheet"
        android:background="@drawable/forget_password_background_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        >
        <View
            android:layout_width="80dp"
            android:layout_height="4dp"
            android:background="@color/white"
            android:layout_margin="16dp"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email_to_send_an_email_verivecation_to_reset_your_password"
            android:gravity="center"
            android:layout_margin="16dp"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email"
            android:autofillHints="emailAddress"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textSize="20sp"
            style="@style/modifiedEditText"
            android:gravity="center"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_blue"
            android:text="@string/send"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textSize="20sp"/>
    </LinearLayout>