<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include layout="@layout/toolbar"
        android:id="@+id/home_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        />
    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginStart="-5dp"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:background="@drawable/logout_button_background"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        tools:context=".MainActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/constraintLayout"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:id="@+id/StudentName"
                android:text="@string/student"
                android:textSize="40sp"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="18dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/StudentImage"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/amazonDesc"
                android:text="@string/study_from_a_to_z"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/StudentName"
                app:layout_constraintEnd_toStartOf="@+id/StudentImage"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:id="@+id/StudentImage"
                android:contentDescription="@string/studentImage"
                android:src="@drawable/students"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toEndOf="@id/StudentName"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="175dp"
                android:id="@+id/row2"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/StudentImage">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/HomeCard"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardElevation="20dp"
                    app:cardCornerRadius="20dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/HomeName"
                            android:text="@string/home"
                            android:textSize="20sp"
                            android:textColor="@color/lavender"

                            android:layout_marginTop="10dp"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@+id/HomeImage"/>
                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:id="@+id/HomeImage"
                            android:contentDescription="@string/home"
                            android:src="@drawable/building"
                            android:layout_marginTop="15dp"
                            android:layout_centerHorizontal="true"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardElevation="20dp"
                    app:cardCornerRadius="20dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/settingsName"
                            android:text="@string/settings"
                            android:textSize="20sp"
                            android:textColor="@color/lavender"
                            android:layout_marginTop="10dp"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@+id/settingsImage"/>
                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:id="@+id/settingsImage"
                            android:contentDescription="@string/settingsImage"
                            android:src="@drawable/settings"
                            android:layout_marginTop="15dp"
                            android:layout_centerHorizontal="true"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row3"
                android:layout_width="0dp"
                android:layout_height="175dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/row2">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/bromodoro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/pomodoroImage"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"

                            android:text="@string/pomodoro"
                            android:textColor="@color/colorAccent"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/pomodoroImage"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:contentDescription="@string/pomodoroImage"
                            android:src="@drawable/clock" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/Notes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/NotesImage"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/notes"
                            android:textColor="@color/colorAccent"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/NotesImage"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:contentDescription="@string/student_notes"
                            android:src="@drawable/notepad" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>